(02/13/07)

*** Ongoing parser changes

*** Make sure /bin and /usr/bin are added to the path in the
    wrapper.
	
*** When there's a NPE or CCE in an exception chain that causes the
    execution to fail, the full stack trace is printed.

(02/11/07)

*** SwiftScript syntax change: The function invocation (i=q)=f(1) must 
    be written with the () parentheses surrounding the return variables.
    Previously, the parentheses were optional, and the same could be written
    as i=q=f(1); This is no longer the case.

(02/10/07)

*** On-going parser changes primarily aimed at producing more user-friendly
    syntax errors but also including these syntax changes:
      - parser no longer recognises vestigial for(;;) construct
      - parser allows type declarations and other top level statements
        (aside from namespace declarations) to be mixed together. Previously,
        all type declarations had to occur before other statements.

(02/09/07)

*** Reorganized logging. Log always goes to a file. Console
    gets little stuff unless -verbose or -debug are used.
	
*** Use a unified run id which is used as a prefix for the
    log, the restart log, the provenance graph, and the 
	remote run directories
	
*** Hmm. Did I mess up the dates on the changelog?

*** Added default properties that work in case
    swift/etc/swift.properties is missing some.

(02/08/07)

*** Added option to always transfer Kickstart records

*** Improved error handling for compilation of SwiftScript code

(02/07/07)

*** Added Kickstart support (optional)

*** Added support for GLOBUS profiles in the site catalog

*** Updated error translations to include a pointer to the
    Kickstart info if available

(02/05/07)

*** Renamed a few things to swift, including:
    - vdl2.properties -> swift.properties
	- ~/.vdl2 -> ~/.swift (the old config is still read though)
	- the log4j "class" for things in Karajan (vdl2 -> swift)
	- vdlrun -> swift
	