@@ -1,3 +1,8 @@
+(02/14/07)
+
+*** Print usage  and exit instead of a nasty exception if the input 
+    file does not exist (bug #15)
+
 (02/13/07)
 
 *** Ongoing parser changes
